# -emulate-syscalls-with-ipc

./: .gitignore  CMakeLists.txt  common.h  direct_syscall  sm_tracer  test.sh
direct-syscall/: direct-syscall  highload.c
pipes/: CMakeLists.txt  tracer.c
ptrace/: a.out  highload.c  tracer.c
shared-memory/: a.out  tracer.c
